Added Groovy benchmark demo